--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,31 @@ footer {
     padding: 1.5rem 0;
     margin-top: 2rem;
 }
+
+/* Стили для галереи */
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.gallery-container figure {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 1rem;
+    text-align: center;
+    background-color: white;
+}
+
+.gallery-container img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.gallery-container figcaption {
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
